<resources>
    <string name="app_name">BloodBankCyprus</string>
    <string name="pass_hint">Password:</string>
    <string name="email_hint">E-Mail:</string>
    <string name="logo_desc">BloodBankLogo</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="login_reg_btn_text">Or Create A New Account</string>
    <string name="action_search_text">Search</string>
    <string name="account_settings_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create A New Account</string>
    <string name="reg_login_text">Already have an account?</string>
    <string name="reg_pass_text">Password:</string>
    <string name="reg_confirm_pass_text">Confirm Password:</string>
    <string name="setup_name_hint">Name:</string>
    <string name="setup_btn_name_text">Save Changes</string>
    <string name="post_desc_hint">Description:</string>
    <string name="new_post_btn_hint">Post It!</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Profile</string>


    <array name="locations">
        <item>Nicosia</item>
        <item>Kyrenia</item>
        <item>Famagusta</item>
        <item>Morphou</item>
    </array>

    <array name="bloodtypes">
        <item>AB RH+</item>
        <item>AB RH-</item>
        <item>A RH+</item>
        <item>A RH-</item>
        <item>B RH+</item>
        <item>B RH-</item>
        <item>0 RH-</item>
        <item>0 RH+</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
